@startuml

title __ANDROIDAPPLICATIONS's Class Diagram__\n

  namespace com.example.androidapplications {
    class com.example.androidapplications.ChatWindow {
        ~ logTAG : String
        ~ sentArray : ArrayList<String>
        # onCreate()
    }
  }
  

  namespace com.example.androidapplications {
    class com.example.androidapplications.ChatWindow.ChatAdapter {
        + ChatAdapter()
        + getCount()
        + getItem()
        + getView()
    }
  }
  

  namespace com.example.androidapplications {
    class com.example.androidapplications.ListItemsActivity {
        ~ logTAG : String
        + print()
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidapplications {
    class com.example.androidapplications.LoginActivity {
        ~ logTAG : String
        + print()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidapplications {
    class com.example.androidapplications.MainActivity {
        ~ logTAG : String
        + print()
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  com.example.androidapplications.ChatWindow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidapplications.ChatWindow +-down- com.example.androidapplications.ChatWindow.ChatAdapter
  com.example.androidapplications.ChatWindow.ChatAdapter -up-|> android.widget.ArrayAdapter
  com.example.androidapplications.ListItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidapplications.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidapplications.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
